--- a/src/components/custom-checkbox/custom-checkbox.module.scss
+++ b/src/components/custom-checkbox/custom-checkbox.module.scss
@@ -1,8 +1,8 @@
 .checkmark {
-  height: 32px;
-  width: 32px;
+  height: 16px;
+  width: 16px;
   background-color: #ffffff;
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid #e2e4e9;
   position: relative;
 
@@ -10,10 +10,10 @@
     content: "";
     position: absolute;
     display: none;
-    top: 1.5px;
-    left: 10px;
-    width: 10px;
-    height: 21px;
+    top: 0.5px;
+    left: 4.5px;
+    width: 5px;
+    height: 10px;
     border: solid #fff;
     border-width: 0 2px 2px 0;
     -webkit-transform: rotate(45deg);
@@ -34,6 +34,7 @@
   font-size: 14px;
   font-weight: 500;
   color: #344054;
+  width: fit-content;
 
   .checkbox-container {
     position: relative;
